--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="gwzDwsZ3IRa_qZpk0IKqfARfFAxrY-eMW-5FNmZv8zU" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Neutral and educational overview of Euppotrade.com. Learn how to verify online investment companies and view a licensed alternative, Edge4Trade." />
@@ -177,3 +178,4 @@
   </footer>
 </body>
 </html>
+
